Implement What We Do menu and fix some layout issues

--- a/src/app/components/accordion-group/accordion-group.scss
+++ b/src/app/components/accordion-group/accordion-group.scss
@@ -8,8 +8,11 @@
     .accordion-item {
 
         > .control-bar {
+            @include form-border();
+
             align-items: center;
             background-color: ui-color(white);
+            border-radius: 0.2rem;
             display: flex;
             height: 5rem;
             justify-content: space-between;
