--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -14,9 +14,7 @@
     <ul class="nav-menu main-menu no-bullets">
         <li class="subjects-dropdown" skip="true"></li>
         <li class="technology-dropdown" skip="true"></li>
-        <li class="nav-menu-item" role="presentation">
-            <a href="/impact" role="menuitem">Our Impact</a>
-        </li>
+        <li class="what-we-do-dropdown" skip="true"></li>
         <li class="nav-menu-item login{model.user.username ? ' dropdown' : ''}">
             <if condition="!model.user.username">
                 <a href="{model.login}" class="pardotTrackClick" data-local="true" role="menuitem">Login</a>
