--- a/src/app/pages/research/alumni-tab/alumni-tab.html
+++ b/src/app/pages/research/alumni-tab/alumni-tab.html
@@ -1,6 +1,8 @@
 <template args="model">
-    <div each="entry in model" class="entry">
-        <div class="name">{entry.name}</div>
-        <div class="description">{entry.title}</div>
+    <div class="card-container">
+        <div each="entry in model" class="entry">
+            <div class="name">{entry.name}</div>
+            <div class="description">{entry.title}</div>
+        </div>
     </div>
 </template>
