--- a/src/app/pages/research/research.html
+++ b/src/app/pages/research/research.html
@@ -7,7 +7,9 @@
             </div>
         </div>
         <div class="images">
-            <img src="/images/research/hero-research-earth@1x.png" alt="">
+            <div class="globe-clipping">
+                <img src="/images/research/hero-research-earth@1x.png" alt="">
+            </div>
             <div class="clipping">
                 <img src="/images/research/hero-research-curves.svg" alt="">
             </div>
