--- a/src/app/components/shell/header/main-menu/dropdown/dropdown.html
+++ b/src/app/components/shell/header/main-menu/dropdown/dropdown.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <a href="{model.dropdownUrl}"
+    <a href="."
      role="menuitem" aria-haspopup="true">
      {model.dropdownLabel}
      <svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30">
