Use Bookstore Content for print order dialog

--- a/src/app/components/dialog/dialog.html
+++ b/src/app/components/dialog/dialog.html
@@ -6,5 +6,5 @@
             <span class="fa fa-times"></span>
         </button>
     </div>
-    <div class="main-region"></div>
+    <div class="main-region" skip="true"></div>
 </template>
