--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div if="model.printLink" class="option">
-                <a href="{model.printLink}" class="show-print-submenu"
+                <a href="/" class="show-print-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-book"></span>
                     <span class="text">
