--- a/src/app/pages/team/team.html
+++ b/src/app/pages/team/team.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <section class="hero">
+    <section if="model" class="hero">
         <div class="text-content">
             <div>
                 <h1>{model.heroHeadline}</h1>
@@ -11,7 +11,7 @@
         </div>
     </section>
     <section class="team">
-        <h2>{model.headline}</h2>
+        <h2 if="model">{model.headline}</h2>
         <people-tabs skip="true"></people-tabs>
         <tab-content skip="true"></tab-content>
         <accordion-region skip="true"></accordion-region>
